feat: add example

--- a/packages/yab-fetch-logger/example/index.html
+++ b/packages/yab-fetch-logger/example/index.html
@@ -7,7 +7,6 @@
     <title>Log Middleware</title>
   </head>
   <body>
-    <script src="../../yab-fetch//dist/yab-fetch.min.js"></script>
-    <script src="../dist/yab-fetch-logger.min.js"></script>
+    <script src="./index.ts"></script>
   </body>
 </html>
