--- a/packages/yab-fetch-logger/example/index.html
+++ b/packages/yab-fetch-logger/example/index.html
@@ -7,6 +7,7 @@
     <title>Log Middleware</title>
   </head>
   <body>
+    <h1>Please open the devtools to see the console.</h1>
     <script src="./index.ts"></script>
   </body>
 </html>
