fix: console.group in async func (#22)
* chore(deps): add parcel

* docs(changelog): update changelog

* chore(deps): add serve

* chore: igore .cache

* feat: add example

* fix: fix webpack build umd path

* feat: add example for logger

* feat: throw the error

* feat: default show origin/pathname

* fix: webpack build:umd dist path

--- a/packages/yab-fetch-logger/example/index.html
+++ b/packages/yab-fetch-logger/example/index.html
@@ -7,7 +7,7 @@
     <title>Log Middleware</title>
   </head>
   <body>
-    <script src="../../yab-fetch//dist/yab-fetch.min.js"></script>
-    <script src="../dist/yab-fetch-logger.min.js"></script>
+    <h1>Please open the devtools to see the console.</h1>
+    <script src="./index.ts"></script>
   </body>
 </html>
